Cabal-Version:      2.4
Name:               cardano-payment-channels
Version:            0.1.0.0
Author:              Benjamin Hindman
Maintainer:          benhindman@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Benjamin Hindman
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Main.UniPaymentChannel
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
